tests/ui/mir/validate/storage-live.stderr
error: internal compiler error: broken MIR in Item(DefId(0:8 ~ storage_live[HASH]::multiple_storage)) (before pass CheckPackedRef) at bb0[1]:
                                StorageLive(_1) which already has storage here
  --> $DIR/storage-live.rs:22:13
   |
LL |             StorageLive(a);
   |             ^^^^^^^^^^^^^^

error: the compiler unexpectedly panicked. this is a bug.

query stack during panic:
#0 [mir_const] preparing `multiple_storage` for borrow checking
#1 [mir_promoted] promoting constants in MIR for `multiple_storage`
end of query stack
